@@ -26,13 +26,10 @@
 package org.olat.admin.user.delete.service;
 
 import java.io.File;
-import java.text.DateFormat;
-import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -40,23 +37,17 @@ import java.util.Map;
 import javax.persistence.TemporalType;
 
 import org.olat.admin.user.delete.SelectionController;
-import org.olat.basesecurity.Authentication;
 import org.olat.basesecurity.BaseSecurity;
 import org.olat.basesecurity.IdentityImpl;
-import org.olat.basesecurity.SecurityGroup;
-import org.olat.basesecurity.manager.AuthenticationHistoryDAO;
 import org.olat.basesecurity.manager.GroupDAO;
-import org.olat.basesecurity.manager.SecurityGroupDAO;
 import org.olat.commons.lifecycle.LifeCycleManager;
 import org.olat.core.CoreSpringFactory;
 import org.olat.core.commons.persistence.DB;
 import org.olat.core.gui.translator.Translator;
 import org.olat.core.id.Identity;
-import org.olat.core.id.User;
 import org.olat.core.id.UserConstants;
 import org.olat.core.logging.OLog;
 import org.olat.core.logging.Tracing;
-import org.olat.core.util.StringHelper;
 import org.olat.core.util.Util;
 import org.olat.core.util.i18n.I18nManager;
 import org.olat.core.util.mail.MailBundle;
@@ -66,18 +57,18 @@ import org.olat.core.util.mail.MailerResult;
 import org.olat.core.util.session.UserSessionManager;
 import org.olat.properties.Property;
 import org.olat.properties.PropertyManager;
-import org.olat.registration.RegistrationManager;
-import org.olat.registration.TemporaryKey;
 import org.olat.repository.RepositoryDeletionModule;
 import org.olat.user.UserDataDeletable;
-import org.olat.user.UserManager;
-import org.olat.user.propertyhandlers.UserPropertyHandler;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 
 /**
- * Manager for user-deletion.
+ * Manager for user-deletion. <br />
+ * User deletion works by implementing the UserDataDeletable interface and
+ * setting an optional delete priority. Use a high priority (890 - 510) to
+ * delete things first. The default priority is 500. Use a low priority (110 -
+ * 490) to delete at the.
  *
  * @author Christian Guretzki
  */
@@ -86,7 +77,6 @@ public class UserDeletionManager {
 	
 	private static final OLog log = Tracing.createLoggerFor(UserDeletionManager.class);
 
-	public static final String DELETED_USER_DELIMITER = "_bkp_";
 	/** Default value for last-login duration in month. */
 	private static final int DEFAULT_LAST_LOGIN_DURATION = 24;
 	/** Default value for delete-email duration in days. */
@@ -99,25 +89,17 @@ public class UserDeletionManager {
 	public static final String SEND_DELETE_EMAIL_ACTION = "sendDeleteEmail";
 	private static final String USER_ARCHIVE_DIR = "archive_deleted_users";
 	private static final String USER_DELETED_ACTION = "userdeleted";
-	private static boolean keepUserLoginAfterDeletion;
-	private static boolean keepUserEmailAfterDeletion;
 
 
 	// Flag used in user-delete to indicate that all deletable managers are initialized
 	@Autowired
 	private RepositoryDeletionModule deletionModule;
 	@Autowired
-	private RegistrationManager registrationManager;
-	@Autowired
 	private BaseSecurity securityManager;
-	@Autowired
-	private SecurityGroupDAO securityGroupDao;
 	@Autowired
 	private MailManager mailManager;
 	@Autowired
 	private UserSessionManager userSessionManager;
-	@Autowired
-	private AuthenticationHistoryDAO suthenticationHistoryDao;
 	@Autowired
 	private GroupDAO groupDao;
 	@Autowired
@@ -271,111 +253,67 @@ public class UserDeletionManager {
 
 	/**
 	 * Delete all user-data in registered deleteable resources.
+	 * 
 	 * @param identity
-	 * @return true
+	 * @return true: delete was successfull; false: delete could not finish
 	 */
-	public void deleteIdentity(Identity identity) {
-		log.info("Start deleteIdentity for identity=" + identity);
-		
-		//logout
+	public boolean deleteIdentity(Identity identity) {
+		log.info("Start deleteIdentity for identity=" + identity);		
+		if(Identity.STATUS_PERMANENT.equals(identity.getStatus())) {
+			log.info("Aborted deletion of identity=" + identity + ", identity is flagged as PERMANENT");					
+			return false;
+		}
+		// Logout user and start with delete process
 		userSessionManager.signOffAndClearAll(identity);
-
-		String newName = getBackupStringWithDate(identity.getName());
-
-		log.info("Start Deleting user=" + identity);
+		
+		// Delete data of modules that implement the user data deletable
+		String anonymisedIdentityName = identity.getKey() + "";
 		File archiveFilePath = getArchivFilePath(identity);
 		Map<String,UserDataDeletable> userDataDeletableResourcesMap = CoreSpringFactory.getBeansOfType(UserDataDeletable.class);
 		List<UserDataDeletable> userDataDeletableResources = new ArrayList<>(userDataDeletableResourcesMap.values());
+		// Start with high priorities (900: user manager), then continue with
+		// others. Default priority is 500. End with low priorities (100: base
+		// security)
 		Collections.sort(userDataDeletableResources, new UserDataDeletableComparator());
 		for (UserDataDeletable element : userDataDeletableResources) {
-			log.info("UserDataDeletable-Loop element=" + element);
-			element.deleteUserData(identity, newName, archiveFilePath);
-		}
-
-		// Delete all authentications for certain identity
-		List<Authentication> authentications = securityManager.getAuthentications(identity);
-		for (Authentication auth:authentications) {
-			log.info("deleteAuthentication auth=" + auth);
-			securityManager.deleteAuthentication(auth);
-			log.debug("Delete auth=" + auth + "  of identity="  + identity);
-		}
-		// delete the authentication history
-		suthenticationHistoryDao.deleteAuthenticationHistory(identity);
-
-		//remove identity from its security groups
-		List<SecurityGroup> securityGroups = securityGroupDao.getSecurityGroupsForIdentity(identity);
-		for (SecurityGroup secGroup : securityGroups) {
-			securityGroupDao.removeIdentityFromSecurityGroup(identity, secGroup);
-			log.info("Removing user=" + identity + " from security group="  + secGroup.toString());
-		}
-		//remove identity from groups
-		groupDao.removeMemberships(identity);
-
-		String key = identity.getUser().getProperty("emchangeKey", null);
-		TemporaryKey tempKey = registrationManager.loadTemporaryKeyByRegistrationKey(key);
-		if (tempKey != null) {
-			registrationManager.deleteTemporaryKey(tempKey);
-		}
-
-
-		identity = securityManager.loadIdentityByKey(identity.getKey());
-		//keep login-name only -> change email
-
-		User persistedUser = identity.getUser();
-		List<UserPropertyHandler> userPropertyHandlers = UserManager.getInstance().getAllUserPropertyHandlers();
-		for (UserPropertyHandler userPropertyHandler : userPropertyHandlers) {
-			String actualProperty = userPropertyHandler.getName();
-			if (userPropertyHandler.isDeletable()
-					&& !(keepUserEmailAfterDeletion && UserConstants.EMAIL.equals(actualProperty))) {
-				persistedUser.setProperty(actualProperty, null);
-			}
-
-			if((!keepUserEmailAfterDeletion && UserConstants.EMAIL.equals(actualProperty))) {
-				String oldEmail = userPropertyHandler.getUserProperty(persistedUser, null);
-				String newEmail = "";
-				if (StringHelper.containsNonWhitespace(oldEmail)){
-					newEmail = getBackupStringWithDate(oldEmail);
-				}
-				log.info("Update user-property user=" + persistedUser);
-				userPropertyHandler.setUserProperty(persistedUser, newEmail);
+			try {
+				log.info("UserDataDeletable-Loop for identity::" + identity.getKey() + " and element::" + element.getClass().getSimpleName());
+				element.deleteUserData(identity, anonymisedIdentityName, archiveFilePath);				
+			} catch (Exception e) {
+				log.error("Error while deleting identity::" + identity.getKey() + " data for and element::"
+						+ element.getClass().getSimpleName()
+						+ ". Aboring delete process, user partially deleted, but not yet marked as deleted", e);
+				dbInstance.rollbackAndCloseSession();
+				return false;
 			}
 		}
-		UserManager.getInstance().updateUserFromIdentity(identity);
 
-		log.info("deleteUserProperties user=" + persistedUser);
+		// Done with all modules that keep user data, now finish delete process
 		dbInstance.commit();
-		identity = securityManager.loadIdentityByKey(identity.getKey());
-		//keep email only -> change login-name
-		if (!keepUserEmailAfterDeletion) {
-			identity = securityManager.saveIdentityName(identity, newName, null);
-		}
+		
+		// Remove identity from all remaining groups and remove roles
+		int count = groupDao.removeMemberships(identity);
+		log.info("Delete " + count + " group memberships/roles for identity::" + identity.getKey());
 
-		//keep everything, change identity.status to deleted
-		log.info("Change stater identity=" + identity);
-		identity = securityManager.saveIdentityStatus(identity, Identity.STATUS_DELETED);
-
+		// Cleanup lifecycle data
+		LifeCycleManager.createInstanceFor(identity).markTimestampFor(USER_DELETED_ACTION, null);
 		LifeCycleManager.createInstanceFor(identity).deleteTimestampFor(SEND_DELETE_EMAIL_ACTION);
-		LifeCycleManager.createInstanceFor(identity).markTimestampFor(USER_DELETED_ACTION, createLifeCycleLogDataFor(identity));
 
-		log.audit("User-Deletion: Delete all userdata for identity=" + identity);
-	}
+		// Anonymise identity to conform with data privacy law. The username is removed
+		// by default and replaced with an anonymous database key. The identity
+		// object itself must remain in the database since there are referenced
+		// objects such as undeletable forum entries linked to it
+		identity = securityManager.saveIdentityName(identity, anonymisedIdentityName, null);
+		log.info("Replaced username with database key for identity::" + identity.getKey());
 
-	public String getBackupStringWithDate(String original){
-		DateFormat dateFormat = new SimpleDateFormat("yyyyMMddHHmm");
-		String dateStamp = dateFormat.format(new Date());
-		return dateStamp + DELETED_USER_DELIMITER + original;
-	}
+		// Finally mark user as deleted and we are done
+		identity = securityManager.saveIdentityStatus(identity, Identity.STATUS_DELETED);
+		log.info("Data of identity deleted and state of identity::" + identity.getKey() + " changed to 'deleted'");
 
-	private String createLifeCycleLogDataFor(Identity identity) {
-		StringBuilder buf = new StringBuilder();
-		buf.append("<identity>");
-		buf.append("<username>").append(identity.getName()).append("</username>");
-		buf.append("<lastname>").append(identity.getName()).append("</lastname>");
-		buf.append("<firstname>").append(identity.getName()).append("</firstname>");
-		buf.append("<email>").append(identity.getName()).append("</email>");
-		buf.append("</identity>");
-		return buf.toString();
-	}
+		dbInstance.commit();
+		log.audit("User-Deletion: Deleted identity::" + identity.getKey());
+		return true;
+	}	
 
 	/**
 	 * Re-activate an identity, lastLogin = now, reset deleteemaildate = null.
@@ -407,7 +345,7 @@ public class UserDeletionManager {
 
 	private int getPropertyByName(String name, int defaultValue) {
 		List<Property> properties = PropertyManager.getInstance().findProperties(null, null, null, PROPERTY_CATEGORY, name);
-		if (properties.size() == 0) {
+		if (properties.isEmpty()) {
 			return defaultValue;
 		} else {
 			return properties.get(0).getLongValue().intValue();
@@ -425,11 +363,11 @@ public class UserDeletionManager {
 	private void setProperty(String propertyName, int value) {
 		List<Property> properties = PropertyManager.getInstance().findProperties(null, null, null, PROPERTY_CATEGORY, propertyName);
 		Property property = null;
-		if (properties.size() == 0) {
+		if (properties.isEmpty()) {
 			property = PropertyManager.getInstance().createPropertyInstance(null, null, null, PROPERTY_CATEGORY, propertyName, null,  new Long(value), null, null);
 		} else {
 			property = properties.get(0);
-			property.setLongValue( new Long(value) );
+			property.setLongValue(Long.valueOf(value));
 		}
 		PropertyManager.getInstance().saveProperty(property);
 	}
@@ -443,27 +381,7 @@ public class UserDeletionManager {
 		}
 		return archiveIdentityRootDir;
 	}
-
-	/**
-	 * Setter method used by spring
-	 * @param keepUserLoginAfterDeletion The keepUserLoginAfterDeletion to set.
-	 */
-	public void setKeepUserLoginAfterDeletion(boolean keepUserLoginAfterDeletion) {
-		UserDeletionManager.keepUserLoginAfterDeletion = keepUserLoginAfterDeletion;
-	}
-
-	/**
-	 * Setter method used by spring
-	 * @param keepUserEmailAfterDeletion The keepUserEmailAfterDeletion to set.
-	 */
-	public void setKeepUserEmailAfterDeletion(boolean keepUserEmailAfterDeletion) {
-		UserDeletionManager.keepUserEmailAfterDeletion = keepUserEmailAfterDeletion;
-	}
-
-	public static boolean isKeepUserLoginAfterDeletion() {
-		return keepUserLoginAfterDeletion;
-	}
-
+	
 	public static class UserDataDeletableComparator implements Comparator<UserDataDeletable> {
 		@Override
 		public int compare(UserDataDeletable o1, UserDataDeletable o2) {
